--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --browsers ChromeHeadless --watch false",
     "docker-prod-build": "docker build --file ./prod.Dockerfile --tag marcingv/at-accelerator:latest .",
     "docker-prod-publish": "docker push marcingv/at-accelerator:latest"
   },
