--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: lint-and-test
+    needs: test
     steps:
       - name: Get Code
         uses: actions/checkout@v4
