--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "test:ci": "ng test --browsers ChromeHeadless --watch false",
     "docker-prod-build": "docker build --file ./prod.Dockerfile --tag marcingv/at-accelerator:latest .",
-    "docker-prod-publish": "docker push marcingv/at-accelerator:latest"
+    "docker-prod-publish": "docker push marcingv/at-accelerator:latest",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -28,15 +29,27 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.3",
+    "@angular-eslint/builder": "17.5.1",
+    "@angular-eslint/eslint-plugin": "17.5.1",
+    "@angular-eslint/eslint-plugin-template": "17.5.1",
+    "@angular-eslint/schematics": "17.5.1",
+    "@angular-eslint/template-parser": "17.5.1",
     "@angular/cli": "^17.3.3",
     "@angular/compiler-cli": "^17.3.4",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "7.10.0",
+    "@typescript-eslint/parser": "7.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "typescript": "~5.4.5"
   }
 }
