Improved docker settings.

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,13 @@ http {
             # serve the URI with a trailing slash. if that fails, then
             # serve the index.html file; this is needed in order to serve
             try_files $uri $uri/ /index.html;
+
+            # Gzip Compression
+            gzip on;
+            gzip_vary on;
+            gzip_proxied any;
+            gzip_comp_level 6;
+            gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript font/woff font/woff2;
         }
     }
 }
