--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular-eslint/template-parser": "17.5.1",
     "@angular/cli": "^17.3.3",
     "@angular/compiler-cli": "^17.3.4",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "7.10.0",
     "@typescript-eslint/parser": "7.10.0",
