--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser": "^18.1.2",
     "@angular/platform-browser-dynamic": "^18.1.2",
     "@angular/router": "^18.1.2",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/entity": "^18.0.1",
+    "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
@@ -35,6 +39,8 @@
     "@angular-eslint/template-parser": "18.1.0",
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.2",
+    "@ngrx/eslint-plugin": "^18.0.1",
+    "@ngrx/schematics": "^18.0.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
