--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.1.2",
     "@ngrx/effects": "^18.0.1",
     "@ngrx/entity": "^18.0.1",
+    "@ngrx/operators": "^18.0.1",
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "rxjs": "~7.8.0",
