--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,14 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": ["ES2022", "dom"],
+    "resolveJsonModule": true,
     "paths": {
       "@core/*": ["src/app/core/*"],
       "@features/*": ["src/app/features/*"],
       "@pages/*": ["src/app/pages/*"],
       "@shared/*": ["src/app/shared/*"],
-      "@testing/*": ["src/app/testing/*"]
+      "@testing/*": ["src/app/testing/*"],
+      "@assets/*": ["src/assets/*"],
     }
   },
   "angularCompilerOptions": {
